--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,17 @@
 # Maven
 log/
 target/
+
+
+.idea
+build
+*.iml
+**/bin
+**/target
+**/.project
+**/.classpath
+**/.settings
+**/.sts4-cache
+**/.gradle
+**/.vscode
+.gradle
